# tskit_ownwership_mockup

./: Cargo.toml  build.rs
src/: bindings.rs  lib.rs
subprojects/fake_tskit/: types.c  types.h
