[package]
name = "tskit_ownwership_mockup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.59.1"
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
